--- a/public/binnacle.html
+++ b/public/binnacle.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bitacora</title>
-  </head>
-  <body>
-    <h1>Joder hola Bitacora</h1>
-    <p>hola</p>
-    <script src="/js/bundle.js"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Binnacle</title>
+</head>
+<body>
+    <div class="container mx-auto p-4">
+        <h1 class="text-3xl font-bold text-center mb-6 text-blue-600">Bitacora</h1>
+        <table id="binnacle-table" class="table-auto border-collapse border border-gray-300 w-full">
+            <thead>
+                <tr class="bg-blue-500 text-white">
+                    <th class="border border-gray-300 px-4 py-2">ID</th>
+                    <th class="border border-gray-300 px-4 py-2">usuario</th>
+                    <th class="border border-gray-300 px-4 py-2">Autorización</th>
+                    <th class="border border-gray-300 px-4 py-2">Fecha de intento</th>
+                </tr>
+            </thead>
+            <tbody id="binnacle-table-body">
+                <!-- Las filas de usuarios se agregarán dinámicamente aquí -->
+            </tbody>
+        </table>
+        <p id="dashboard-message" class="mt-4 text-center text-gray-700"></p>
+    </div>
+    <script src="./js/bundle.js"></script>
+</body>
 </html>
+
