--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>Inicio</title>
+    <script src="/js/bundle.js" defer></script>
 </head>
-<body>
-    <div id="app">
-        <h1>Bienvenido a TouchIn</h1>
-        <p>Selecciona una opción del menú para continuar.</p>
+<body class="bg-gray-100">
+    <div id="app" class="flex flex-col items-center justify-center min-h-screen bg-gray-50">
+        <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-xl text-center">
+            <h1 class="text-4xl font-bold text-blue-600 mb-4">¡Bienvenido a TouchIn!</h1>
+            <p class="text-lg text-gray-700 mb-6">Gestiona accesos de manera segura y eficiente. Selecciona una opción del menú para continuar.</p>
+            <div class="flex justify-center space-x-4">
+                <a href="/register.html" class="px-6 py-2 bg-blue-500 text-white font-semibold rounded-lg shadow hover:bg-blue-600 focus:outline-none focus:ring focus:ring-blue-300">
+                    Registro
+                </a>
+                <a href="/dashboard.html" class="px-6 py-2 bg-green-500 text-white font-semibold rounded-lg shadow hover:bg-green-600 focus:outline-none focus:ring focus:ring-green-300">
+                    Dashboard
+                </a>
+                <a href="/binnacle.html" class="px-6 py-2 bg-yellow-500 text-white font-semibold rounded-lg shadow hover:bg-yellow-600 focus:outline-none focus:ring focus:ring-yellow-300">
+                    Bitácora
+                </a>
+            </div>
+        </div>
     </div>
-    <script src="/js/bundle.js"></script>
 </body>
 </html>
