--- a/public/register.html
+++ b/public/register.html
@@ -6,7 +6,40 @@
     <title>Registro</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="bg-white p-8 rounded-lg shadow-md w-full max-w-md mx-auto my-3">
+      <h1 class="text-2xl font-bold mb-6 text-center text-blue-600">
+        Registro de Usuario
+      </h1>
+      <form id="registro-form" class="space-y-4">
+        <div>
+          <label for="name" class="block text-gray-700 font-medium mb-2">Nombre:</label>
+          <input
+            type="text"
+            id="name"
+            name="name"
+            required
+            class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring focus:ring-blue-300"
+            placeholder="Ingresa tu nombre"
+          />
+        </div>
+        <div>
+          <label for="email" class="block text-gray-700 font-medium mb-2">Correo Electrónico:</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            required
+            class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring focus:ring-blue-300"
+            placeholder="Ingresa tu correo electrónico"
+          />
+        </div>
+        <button
+          type="submit"
+          class="w-full bg-blue-500 text-white py-2 px-4 rounded-lg font-bold hover:bg-blue-600 focus:outline-none focus:ring focus:ring-blue-300">Registrar
+        </button>
+      </form>
+      <p id="response" class="mt-4 text-center text-gray-700"></p>
+    </div>
     <script src="/js/bundle.js" defer></script>
   </body>
 </html>
