--- a/public/binnacle.html
+++ b/public/binnacle.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="css/styles.css">
     <title>Binnacle</title>
+    <base href="/public/">
+    <script src="/js/bundle.js"></script>
 </head>
 <body>
     <div class="container mx-auto p-4">
@@ -23,7 +27,6 @@
         </table>
         <p id="dashboard-message" class="mt-4 text-center text-gray-700"></p>
     </div>
-    <script src="./js/bundle.js"></script>
 </body>
 </html>
 
