--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="css/styles.css">
     <title>Inicio</title>
+    <base href="/public/">
     <script src="/js/bundle.js" defer></script>
 </head>
 <body class="bg-gray-100">
