--- a/public/register.html
+++ b/public/register.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="css/styles.css">
     <title>Registro</title>
+    <base href="/public/">
+    <script src="/js/bundle.js" defer></script>
   </head>
   <body>
     <div id="app" class="bg-white p-8 rounded-lg shadow-md w-full max-w-md mx-auto my-3">
@@ -40,6 +44,5 @@
       </form>
       <p id="response" class="mt-4 text-center text-gray-700"></p>
     </div>
-    <script src="/js/bundle.js" defer></script>
   </body>
 </html>
