--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,13 @@
             <h1 class="text-4xl font-bold text-blue-600 mb-4">¡Bienvenido a TouchIn!</h1>
             <p class="text-lg text-gray-700 mb-6">Gestiona accesos de manera segura y eficiente. Selecciona una opción del menú para continuar.</p>
             <div class="flex justify-center space-x-4">
-                <a href="/register.html" class="px-6 py-2 bg-blue-500 text-white font-semibold rounded-lg shadow hover:bg-blue-600 focus:outline-none focus:ring focus:ring-blue-300">
+                <a href="/register" class="px-6 py-2 bg-blue-500 text-white font-semibold rounded-lg shadow hover:bg-blue-600 focus:outline-none focus:ring focus:ring-blue-300">
                     Registro
                 </a>
-                <a href="/dashboard.html" class="px-6 py-2 bg-green-500 text-white font-semibold rounded-lg shadow hover:bg-green-600 focus:outline-none focus:ring focus:ring-green-300">
+                <a href="/dashboard" class="px-6 py-2 bg-green-500 text-white font-semibold rounded-lg shadow hover:bg-green-600 focus:outline-none focus:ring focus:ring-green-300">
                     Dashboard
                 </a>
-                <a href="/binnacle.html" class="px-6 py-2 bg-yellow-500 text-white font-semibold rounded-lg shadow hover:bg-yellow-600 focus:outline-none focus:ring focus:ring-yellow-300">
+                <a href="/binnacle" class="px-6 py-2 bg-yellow-500 text-white font-semibold rounded-lg shadow hover:bg-yellow-600 focus:outline-none focus:ring focus:ring-yellow-300">
                     Bitácora
                 </a>
             </div>
